--- a/package.json
+++ b/package.json
@@ -4,11 +4,28 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "tsc && ts-node dist/index.js",
+    "start:dev": "tsc-watch --onSuccess \"ts-node dist/index.js\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.3"
+    "dotenv": "^16.0.0",
+    "express": "^4.17.3",
+    "json2csv": "^5.0.7",
+    "ngrok": "^4.3.0"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.13",
+    "@types/node": "^17.0.21",
+    "@typescript-eslint/eslint-plugin": "^5.13.0",
+    "@typescript-eslint/parser": "^5.13.0",
+    "eslint": "^8.10.0",
+    "eslint-config-prettier": "^8.4.0",
+    "prettier": "2.5.1",
+    "ts-node": "^10.5.0",
+    "tsc-watch": "^4.6.0",
+    "typescript": "^4.5.5"
   }
 }
