--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"start": "NODE_ENV=mainnet tsc && ts-node dist/index.js",
+		"start": "tsc && NODE_ENV=mainnet ts-node dist/index.js",
 		"start:dev": "NODE_ENV=testnet tsc-watch --onSuccess \"ts-node dist/index.js\"",
 		"start:ngrok": "ngrok http 3000",
 		"test": "echo \"Error: no test specified\" && exit 1"
