--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
 	"main": "index.js",
 	"scripts": {
 		"start": "tsc && NODE_ENV=mainnet ts-node dist/index.js",
+		"start:test": "tsc && NODE_ENV=testnet ts-node dist/index.js",
 		"start:dev": "NODE_ENV=testnet tsc-watch --onSuccess \"ts-node dist/index.js\"",
-		"start:ngrok": "ngrok http 3000",
+		"ngrok": "ngrok http 3000",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"author": "",
