--- a/package.json
+++ b/package.json
@@ -13,18 +13,20 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"@dydxprotocol/v3-client": "^1.6.7",
+		"@sentry/node": "^6.18.2",
+		"@sentry/tracing": "^6.18.2",
+		"@types/config": "^0.0.41",
 		"@types/express": "^4.17.13",
 		"@types/node": "^17.0.21",
-		"ts-node": "^10.5.0",
-		"typescript": "^4.5.5",
-		"@dydxprotocol/v3-client": "^1.6.7",
-		"@types/config": "^0.0.41",
 		"config": "^3.3.7",
 		"dotenv": "^16.0.0",
 		"express": "^4.17.3",
 		"js-yaml": "^4.1.0",
 		"ngrok": "^4.3.0",
-		"node-json-db": "^1.4.1"
+		"node-json-db": "^1.4.1",
+		"ts-node": "^10.5.0",
+		"typescript": "^4.5.5"
 	},
 	"devDependencies": {
 		"@typescript-eslint/eslint-plugin": "^5.13.0",
