--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,8 +4,7 @@ services:
     build: ./
     tty: true
     volumes:
-      - strategies:/app/strategies
-      - exports:/app/exports
+      - data:/app/data
     ports:
       - '80:3000'
     environment:
@@ -18,5 +17,4 @@ services:
       TRADINGVIEW_PASSPHRASE: ${TRADINGVIEW_PASSPHRASE}
       SENTRY_DNS: ${SENTRY_DNS}
 volumes:
-  strategies:
-  exports:
+  data:
