--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"config": "^3.3.7",
 		"dotenv": "^16.0.0",
 		"express": "^4.17.3",
+		"helmet": "^5.0.2",
 		"js-yaml": "^4.1.0",
 		"ngrok": "^4.3.0",
 		"node-json-db": "^1.4.1",
