--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 	"license": "ISC",
 	"dependencies": {
 		"@dydxprotocol/v3-client": "^1.6.7",
+		"@sentry/integrations": "^6.19.1",
 		"@sentry/node": "^6.18.2",
 		"@sentry/tracing": "^6.18.2",
 		"@types/config": "^0.0.41",
