--- a/.env.sample
+++ b/.env.sample
@@ -1,8 +1,10 @@
+# Required variables
 ETH_ADDRESS=
 STARK_PUBLIC_KEY=
 STARK_PRIVATE_KEY=
 API_KEY=
 API_PASSPHRASE=
 API_SECRET=
+# Optional variables
 TRADINGVIEW_PASSPHRASE=
 SENTRY_DNS=
