add codes for perpetual protocols

--- a/.env.sample
+++ b/.env.sample
@@ -1,10 +1,15 @@
-# Required variables
+# Required variables for dydx
 ETH_ADDRESS=
 STARK_PUBLIC_KEY=
 STARK_PRIVATE_KEY=
 API_KEY=
 API_PASSPHRASE=
 API_SECRET=
+
+# Required variables for perpetual protocol
+ETH_PRIVATE_KEY=
+
 # Optional variables
 TRADINGVIEW_PASSPHRASE=
 SENTRY_DNS=
+
