--- a/config/production.yaml
+++ b/config/production.yaml
@@ -1,5 +1,11 @@
-Network:
-  host: 'https://api.dydx.exchange'
-  chainID: 1
-User:
-  limitFee: 0.2
+Dydx:
+  Network:
+    host: https://api.dydx.exchange
+    chainID: 1
+  User:
+    limitFee: 0.2
+Perpetual:
+  Network:
+    host: https://mainnet.optimism.io/
+  User:
+    slippage: 0.05
