add latest version ethers

--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
 		"node-json-db": "^1.4.1",
 		"ts-node": "^10.5.0",
 		"typescript": "^4.5.5",
-		"@perp/sdk-curie": "1.16.0"
+		"@perp/sdk-curie": "1.16.0",
+		"ethers": "^5.7.2"
 	},
 	"devDependencies": {
 		"@typescript-eslint/eslint-plugin": "^5.13.0",
