--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
 	"scripts": {
 		"start": "tsc && NODE_ENV=production ts-node dist/index.js",
 		"start:test": "tsc && NODE_ENV=development ts-node dist/index.js",
-		"start:dev": "NODE_ENV=development tsc-watch --onSuccess \"ts-node dist/index.js\"",
+		"start:dev": "tsc && NODE_ENV=development tsc-watch --onSuccess \"ts-node dist/index.js\"",
 		"ngrok": "ngrok http 3000",
+		"ngrok:docker": "ngrok http 80",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"author": "0xIbuki",
