rename to PERPETUAL_PRIVATE_KEY

--- a/.env.sample
+++ b/.env.sample
@@ -7,7 +7,7 @@ API_PASSPHRASE=
 API_SECRET=
 
 # Required variables for perpetual protocol
-ETH_PRIVATE_KEY=
+PERPETUAL_PRIVATE_KEY=
 
 # Optional variables
 TRADINGVIEW_PASSPHRASE=
