--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -17,5 +17,5 @@ services:
       API_SECRET: ${API_SECRET}
       TRADINGVIEW_PASSPHRASE: ${TRADINGVIEW_PASSPHRASE}
       SENTRY_DNS: ${SENTRY_DNS}
-      ETH_PRIVATE_KEY: ${ETH_PRIVATE_KEY}
+      PERPETUAL_PRIVATE_KEY: ${PERPETUAL_PRIVATE_KEY}
     command: yarn start:dev
