track trading volume for perp

--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -18,4 +18,5 @@ services:
       TRADINGVIEW_PASSPHRASE: ${TRADINGVIEW_PASSPHRASE}
       SENTRY_DNS: ${SENTRY_DNS}
       PERPETUAL_PRIVATE_KEY: ${PERPETUAL_PRIVATE_KEY}
+      PERPETUAL_REFERRAL_CODE: ${PERPETUAL_REFERRAL_CODE}
     command: yarn start:dev
