--- a/config/development.yaml
+++ b/config/development.yaml
@@ -6,6 +6,6 @@ Dydx:
     limitFee: 0.2
 Perpetual:
   Network:
-    host: https://goerli.optimism.io/
+    host: https://mainnet.optimism.io/
   User:
     slippage: 0.05
