--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,3 +17,4 @@ services:
       TRADINGVIEW_PASSPHRASE: ${TRADINGVIEW_PASSPHRASE}
       SENTRY_DNS: ${SENTRY_DNS}
       PERPETUAL_PRIVATE_KEY: ${PERPETUAL_PRIVATE_KEY}
+      PERPETUAL_REFERRAL_CODE: ${PERPETUAL_REFERRAL_CODE}
