--- a/.env.sample
+++ b/.env.sample
@@ -9,6 +9,9 @@ API_SECRET=
 # Required variables for perpetual protocol
 PERPETUAL_PRIVATE_KEY=
 
+# Required variables for GMX v2
+GMX_PRIVATE_KEY=
+
 # Optional variables
 TRADINGVIEW_PASSPHRASE=
 SENTRY_DNS=
