--- a/config/production.yaml
+++ b/config/production.yaml
@@ -9,3 +9,6 @@ Perpetual:
     host: https://mainnet.optimism.io/
   User:
     slippage: 0.05
+GMX:
+  Network:
+    host: https://arbitrum.llamarpc.com
