--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 	"license": "MIT",
 	"dependencies": {
 		"@dydxprotocol/v3-client": "^1.14.0",
+		"@perp/sdk-curie": "1.16.0",
 		"@sentry/integrations": "^6.19.1",
 		"@sentry/node": "^6.18.2",
 		"@sentry/tracing": "^6.18.2",
@@ -24,15 +25,14 @@
 		"@types/node": "^17.0.21",
 		"config": "^3.3.7",
 		"dotenv": "^16.0.0",
+		"ethers": "^5.7.2",
 		"express": "^4.17.3",
 		"helmet": "^5.0.2",
 		"js-yaml": "^4.1.0",
 		"ngrok": "^4.3.0",
 		"node-json-db": "^1.4.1",
 		"ts-node": "^10.5.0",
-		"typescript": "^4.5.5",
-		"@perp/sdk-curie": "1.16.0",
-		"ethers": "^5.7.2"
+		"typescript": "^4.5.5"
 	},
 	"devDependencies": {
 		"@typescript-eslint/eslint-plugin": "^5.13.0",
