--- a/package.json
+++ b/package.json
@@ -8,10 +8,9 @@
 		"start": "tsc && NODE_ENV=production ts-node dist/index.js",
 		"start:test": "tsc && NODE_ENV=development ts-node dist/index.js",
 		"start:dev": "tsc && NODE_ENV=development tsc-watch --onSuccess \"ts-node dist/index.js\"",
+		"test": "jest",
 		"ngrok": "ngrok http 3000",
-		"ngrok:docker": "ngrok http 80",
-		"test": "echo \"Error: no test specified\" && exit 1",
-		"dev:example": "ts-node example.ts"
+		"ngrok:docker": "ngrok http 80"
 	},
 	"author": "0xIbuki",
 	"license": "MIT",
@@ -36,11 +35,14 @@
 		"typescript": "^4.5.5"
 	},
 	"devDependencies": {
+		"@types/jest": "^29.5.11",
 		"@typescript-eslint/eslint-plugin": "^5.13.0",
 		"@typescript-eslint/parser": "^5.13.0",
 		"eslint": "^8.10.0",
 		"eslint-config-prettier": "^8.4.0",
+		"jest": "^29.7.0",
 		"prettier": "2.5.1",
+		"ts-jest": "^29.1.1",
 		"tsc-watch": "^4.6.0"
 	}
 }
