--- a/.env.sample
+++ b/.env.sample
@@ -11,8 +11,8 @@ PERPETUAL_PRIVATE_KEY=
 
 # Required variables for GMX v2
 GMX_PRIVATE_KEY=
+GMX_LEVERAGE=2
 
 # Optional variables
 TRADINGVIEW_PASSPHRASE=
 SENTRY_DNS=
-
