--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	"main": "index.js",
 	"scripts": {
 		"start": "tsc && NODE_ENV=production ts-node dist/index.js",
-		"start:test": "tsc && NODE_ENV=development ts-node dist/index.js",
+		"start:test": "tsc && NODE_ENV=test ts-node dist/index.js",
 		"start:dev": "tsc && NODE_ENV=development tsc-watch --onSuccess \"ts-node dist/index.js\"",
 		"test": "jest",
 		"ngrok": "ngrok http 3000",
