--- a/config/test.yaml
+++ b/config/test.yaml
@@ -13,3 +13,9 @@ GMX:
   Network:
     host: http://127.0.0.1:8545
     # host: https://arbitrum.llamarpc.com
+DydxV4:
+  IndexerConfig:
+    httpsEndpoint: https://indexer.dydx.trade
+    wssEndpoint: wss://indexer.dydx.trade/v4/w
+  ValidatorConfig:
+    restEndpoint: https://dydx-mainnet-full-rpc.public.blastapi.io
