--- a/.env.sample
+++ b/.env.sample
@@ -1,10 +1,13 @@
-# Required variables for dydx
+# Required variables for dydx v3
 ETH_ADDRESS=
 STARK_PUBLIC_KEY=
 STARK_PRIVATE_KEY=
 API_KEY=
 API_PASSPHRASE=
 API_SECRET=
+
+# Required variables for dYdX v4
+DYDX_V4_MNEMONIC=
 
 # Required variables for perpetual protocol
 PERPETUAL_PRIVATE_KEY=
