--- a/config/production.yaml
+++ b/config/production.yaml
@@ -12,3 +12,9 @@ Perpetual:
 GMX:
   Network:
     host: 'https://arb1.arbitrum.io/rpc'
+DydxV4:
+  IndexerConfig:
+    httpsEndpoint: https://indexer.dydx.trade
+    wssEndpoint: wss://indexer.dydx.trade/v4/w
+  ValidatorConfig:
+    restEndpoint: https://dydx-mainnet-full-rpc.public.blastapi.io
