--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 		"start": "tsc && NODE_ENV=production node dist/index.js",
 		"start:test": "tsc && NODE_ENV=test ts-node dist/index.js",
 		"start:dev": "tsc && NODE_ENV=development tsc-watch --onSuccess \"ts-node dist/index.js\"",
+		"decode": "ts-node scripts/decode.ts",
 		"test": "jest",
 		"ngrok": "ngrok http 3000",
 		"ngrok:docker": "ngrok http 80"
@@ -24,6 +25,7 @@
 		"@types/config": "^0.0.41",
 		"@types/express": "^4.17.13",
 		"@types/node": "^20.10.0",
+		"axios": "^1.6.7",
 		"config": "^3.3.7",
 		"decimal.js": "^10.4.3",
 		"dotenv": "^16.0.0",
