--- a/config/production.yaml
+++ b/config/production.yaml
@@ -17,4 +17,6 @@ DydxV4:
     httpsEndpoint: https://indexer.dydx.trade
     wssEndpoint: wss://indexer.dydx.trade/v4/w
   ValidatorConfig:
-    restEndpoint: https://dydx-mainnet-full-rpc.public.blastapi.io
+    restEndpoint: https://dydx-ops-rpc.kingnodes.com
+    # restEndpoint: https://dydx-rest.publicnode.com
+    # restEndpoint: https://dydx-mainnet-full-rpc.public.blastapi.io
