feat: improve authentication in proxy

--- a/.env.sample
+++ b/.env.sample
@@ -5,7 +5,8 @@ STARK_PRIVATE_KEY=
 API_KEY=
 API_PASSPHRASE=
 API_SECRET=
-
+AES_KEY=
+AUTH_MESSAGE=
 # Required variables for perpetual protocol
 PERPETUAL_PRIVATE_KEY=
 
