--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     volumes:
       - ./data:/app/data
     ports:
-      - '81:3000'
+      - '3000:3000'
     environment:
       ETH_ADDRESS: ${ETH_ADDRESS}
       STARK_PUBLIC_KEY: ${STARK_PUBLIC_KEY}
@@ -18,3 +18,5 @@ services:
       SENTRY_DNS: ${SENTRY_DNS}
       PERPETUAL_PRIVATE_KEY: ${PERPETUAL_PRIVATE_KEY}
       PERPETUAL_REFERRAL_CODE: ${PERPETUAL_REFERRAL_CODE}
+      AES_KEY: ${AES_KEY}
+      AUTH_MESSAGE: ${AUTH_MESSAGE}
