--- a/.env.sample
+++ b/.env.sample
@@ -16,6 +16,9 @@ PERPETUAL_PRIVATE_KEY=
 GMX_PRIVATE_KEY=
 GMX_LEVERAGE=2
 
+# Required variables for Bluefin
+BLUEFIN_MNEMONIC=
+
 # Optional variables
 TRADINGVIEW_PASSPHRASE=
 SENTRY_DNS=
