--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 	"author": "0xIbuki",
 	"license": "MIT",
 	"dependencies": {
+		"@bluefin-exchange/bluefin-v2-client": "^5.2.35",
 		"@dydxprotocol/v3-client": "^1.14.0",
 		"@dydxprotocol/v4-client-js": "^1.0.27",
 		"@perp/sdk-curie": "^1.22.0",
@@ -36,7 +37,7 @@
 		"ngrok": "^4.3.0",
 		"node-json-db": "^1.4.1",
 		"ts-node": "^10.5.0",
-		"typescript": "^4.5.5"
+		"typescript": "^5.1.6"
 	},
 	"devDependencies": {
 		"@types/jest": "^29.5.11",
