feat: migrate node-env to env

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,3 +20,4 @@ services:
       PERPETUAL_REFERRAL_CODE: ${PERPETUAL_REFERRAL_CODE}
       AES_KEY: ${AES_KEY}
       AUTH_MESSAGE: ${AUTH_MESSAGE}
+      NODE_ENV: ${NODE_ENV}
