--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
 		"@types/node": "^20.10.0",
 		"axios": "^1.6.7",
 		"config": "^3.3.7",
+		"cron": "^3.1.7",
+		"csv-writer": "^1.6.0",
 		"decimal.js": "^10.4.3",
 		"dotenv": "^16.0.0",
 		"express": "^4.17.3",
@@ -38,16 +40,17 @@
 		"typescript": "^5.1.6"
 	},
 	"devDependencies": {
-		"ts-node": "^10.5.0",
-		"ngrok": "^4.3.0",
+		"@types/cron": "^2.4.0",
 		"@types/jest": "^29.5.11",
 		"@typescript-eslint/eslint-plugin": "^5.13.0",
 		"@typescript-eslint/parser": "^5.13.0",
 		"eslint": "^8.10.0",
 		"eslint-config-prettier": "^8.4.0",
 		"jest": "^29.7.0",
+		"ngrok": "^4.3.0",
 		"prettier": "2.5.1",
 		"ts-jest": "^29.1.1",
+		"ts-node": "^10.5.0",
 		"tsc-watch": "^4.6.0"
 	}
 }
