--- a/.env.sample
+++ b/.env.sample
@@ -22,3 +22,6 @@ BLUEFIN_MNEMONIC=
 # Optional variables
 TRADINGVIEW_PASSPHRASE=
 SENTRY_DNS=
+
+FILL_WAIT_TIME_SECONDS=300
+UPDATE_POSITIONS_TIMER="*/30 * * * * *"
