--- a/.env.sample
+++ b/.env.sample
@@ -12,6 +12,11 @@ DYDX_V4_MNEMONIC=
 # Required variables for perpetual protocol
 PERPETUAL_PRIVATE_KEY=
 
+# Required variables for hyperliquid
+HYPERLIQUID_PRIVATE_KEY=
+HYPERLIQUID_WALLET_ADDRESS=
+HYPERLIQUID_VAULT_ADDRESS=
+
 # Required variables for GMX v2
 GMX_PRIVATE_KEY=
 GMX_LEVERAGE=2
