--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"@types/express": "^4.17.13",
 		"@types/node": "^20.10.0",
 		"axios": "^1.6.7",
+		"ccxt": "^4.3.68",
 		"config": "^3.3.7",
 		"cron": "^3.1.7",
 		"decimal.js": "^10.4.3",
