--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"@types/config": "^0.0.41",
 		"@types/express": "^4.17.13",
 		"@types/node": "^20.10.0",
+		"async-mutex": "^0.5.0",
 		"axios": "^1.6.7",
 		"ccxt": "^4.3.68",
 		"config": "^3.3.7",
