feat: add onlysell mode

--- a/.env.sample
+++ b/.env.sample
@@ -8,6 +8,8 @@ API_SECRET=
 
 # Required variables for dYdX v4
 DYDX_V4_MNEMONIC=
+# Enter OnlySell to execute only sell transactions
+DYDX_V4_MODE=
 
 # Required variables for perpetual protocol
 PERPETUAL_PRIVATE_KEY=
@@ -16,6 +18,8 @@ PERPETUAL_PRIVATE_KEY=
 HYPERLIQUID_PRIVATE_KEY=
 HYPERLIQUID_WALLET_ADDRESS=
 HYPERLIQUID_VAULT_ADDRESS=
+# Enter OnlySell to execute only sell transactions
+HYPERLIQUID_MODE=
 
 # Required variables for GMX v2
 GMX_PRIVATE_KEY=
