feat: added bybit [WIP]

--- a/.env.sample
+++ b/.env.sample
@@ -21,6 +21,12 @@ HYPERLIQUID_VAULT_ADDRESS=
 # Enter OnlySell to execute only sell transactions
 HYPERLIQUID_MODE=
 
+# Required variables for bybit
+BYBIT_API_KEY=
+BYBIT_SECRET=
+# Enter OnlySell to execute only sell transactions
+BYBIT_MODE=
+
 # Required variables for GMX v2
 GMX_PRIVATE_KEY=
 GMX_LEVERAGE=2
