--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
 	"license": "MIT",
 	"dependencies": {
 		"@bluefin-exchange/bluefin-v2-client": "^5.2.35",
-		"@dydxprotocol/v3-client": "^1.14.0",
+		"@dydxprotocol/v3-client": "^1.16.0",
 		"@dydxprotocol/v4-client-js": "^1.0.27",
 		"@perp/sdk-curie": "^1.22.0",
 		"@sentry/integrations": "^6.19.1",
@@ -31,6 +31,7 @@
 		"config": "^3.3.7",
 		"decimal.js": "^10.4.3",
 		"dotenv": "^16.0.0",
+		"ethers-v6": "npm:ethers@6.13.4",
 		"express": "^4.17.3",
 		"helmet": "^5.0.2",
 		"js-yaml": "^4.1.0",
@@ -38,16 +39,16 @@
 		"typescript": "^5.1.6"
 	},
 	"devDependencies": {
-		"ts-node": "^10.5.0",
-		"ngrok": "^4.3.0",
 		"@types/jest": "^29.5.11",
 		"@typescript-eslint/eslint-plugin": "^5.13.0",
 		"@typescript-eslint/parser": "^5.13.0",
 		"eslint": "^8.10.0",
 		"eslint-config-prettier": "^8.4.0",
 		"jest": "^29.7.0",
+		"ngrok": "^4.3.0",
 		"prettier": "2.5.1",
 		"ts-jest": "^29.1.1",
+		"ts-node": "^10.5.0",
 		"tsc-watch": "^4.6.0"
 	}
 }
