--- a/.env.sample
+++ b/.env.sample
@@ -8,6 +8,7 @@
 ######################################
 TRADINGVIEW_PASSPHRASE=
 SENTRY_DNS=
+DISCORD_WEBHOOK_URL=
 
 ######################################
 #     Profile-specific variables     #
@@ -30,7 +31,7 @@ PERPETUAL_PRIVATE_KEY=
 
 # Required variables for GMX v2
 GMX_PRIVATE_KEY=
-GMX_LEVERAGE=2
+GMX_LEVERAGE=
 
 # Required variables for Bluefin
 BLUEFIN_MNEMONIC=
