--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
 	"dependencies": {
 		"@bluefin-exchange/bluefin-v2-client": "^5.2.35",
 		"@msgpack/msgpack": "^3.0.0-beta.2",
-		"@dydxprotocol/v3-client": "^1.16.0",
 		"@dydxprotocol/v4-client-js": "^1.0.27",
 		"@perp/sdk-curie": "^1.22.0",
 		"@sentry/integrations": "^6.19.1",
@@ -29,6 +28,7 @@
 		"@types/express": "^4.17.13",
 		"@types/node": "^20.10.0",
 		"axios": "^1.6.7",
+		"big.js": "6.1.1",
 		"config": "^3.3.7",
 		"decimal.js": "^10.4.3",
 		"dotenv": "^16.0.0",
