--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 		"start": "tsc && NODE_ENV=production node dist/index.js",
 		"start:test": "tsc && NODE_ENV=test ts-node dist/index.js",
 		"start:dev": "tsc && NODE_ENV=development tsc-watch --onSuccess \"ts-node dist/index.js\"",
-		"start:prod": "tsc && NODE_ENV=production tsc-watch --onSuccess \"node dist/index.js\"",
+		"start:watch": "tsc && NODE_ENV=production tsc-watch --onSuccess \"node dist/index.js\"",
 		"decode": "ts-node scripts/decode.ts",
 		"test": "jest",
 		"test:prod": "NODE_ENV=production jest",
