--- a/.env.sample
+++ b/.env.sample
@@ -14,6 +14,11 @@ BLUEFIN_MNEMONIC=
 # Required variables for Hyperliquid
 HYPERLIQUID_PRIVATE_KEY=
 
+# Required variables for GRVT
+GRVT_API_KEY=
+GRVT_PRIVATE_KEY=
+GRVT_TRADING_ACCOUNT_ID=
+
 # Optional variables
 TRADINGVIEW_PASSPHRASE=
 SENTRY_DNS=
