--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
 		"ngrok:docker": "ngrok http 80"
 	},
 	"author": "0xIbuki",
-	"license": "MIT",
+	"license": "GPL-3.0-only",
 	"dependencies": {
 		"@bluefin-exchange/bluefin-v2-client": "^5.2.35",
 		"@dydxprotocol/v4-client-js": "^1.0.27",
@@ -28,6 +28,7 @@
 		"@types/config": "^0.0.41",
 		"@types/express": "^4.17.13",
 		"@types/node": "^20.10.0",
+		"micro-eth-signer": "^0.18.1",
 		"axios": "^1.6.7",
 		"big.js": "6.1.1",
 		"config": "^3.3.7",
